# gr-air-modes

./: CMakeLists.txt  Dockerfile
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.8.____cpython.yaml  linux_ppc64le_python3.9.____cpython.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____cpython.yaml  osx_arm64_python3.10.____cpython.yaml  osx_arm64_python3.8.____cpython.yaml  osx_arm64_python3.9.____cpython.yaml  win_64_python3.10.____cpython.yaml  win_64_python3.8.____cpython.yaml  win_64_python3.9.____cpython.yaml
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: modes_gui
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
include/air_modes/: preamble.h  slicer.h
include/gr_air_modes/: preamble.h  slicer.h
lib/: CMakeLists.txt  modes_crc.cc  preamble_impl.cc  preamble_impl.h  slicer_impl.cc  slicer_impl.h
python/: CMakeLists.txt  __init__.py  altitude.py  az_map.py  compass.py  cpr.py  flightgear.py  get_uniq.py  gui_model.py  mlat.py  radio.py  raw_server.py  sbs1.py
python/bindings/: CMakeLists.txt  preamble_python.cc  python_bindings.cc  slicer_python.cc
python/bindings/docstrings/: preamble_pydoc_template.h  slicer_pydoc_template.h
res/: CMakeLists.txt  modes_rx.ui
